<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:orientation     ="vertical"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    tools:context           ="eu.mobile.parttimejob.activities.RegisterActivity"
    android:layout_margin   ="20dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:layout_marginBottom ="5dp">

        <EditText
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:inputType           ="text"
            android:hint                ="@string/first_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:layout_marginBottom ="5dp">

        <EditText
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:inputType           ="text"
            android:hint                ="@string/last_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:layout_marginBottom ="5dp">

        <EditText
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:inputType           ="textPassword"
            android:hint                ="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:layout_marginBottom ="5dp">

        <EditText
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:inputType           ="textPassword"
            android:hint                ="@string/repeat_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:layout_marginBottom ="5dp">

        <EditText
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:inputType           ="text"
            android:hint                ="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:text            ="@string/sign_up"/>



</LinearLayout>
