<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    tools:context           ="eu.mobile.parttimejob.activities.LoginActivity"
    android:background      ="@android:color/white">


    <LinearLayout
        android:layout_width            ="match_parent"
        android:layout_height           ="wrap_content"
        android:orientation             ="vertical"
        android:layout_centerInParent   ="true"
        android:background              ="@drawable/login_background"
        android:layout_margin           ="20dp"
        android:padding                 ="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginBottom ="5dp">

            <EditText
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:inputType           ="text"
                android:hint                ="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:layout_marginTop    ="5dp">

            <EditText
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:inputType       ="textPassword"
                android:hint            ="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id              ="@+id/forgot_password_btn"
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:background      ="@android:color/transparent"
            android:text            ="@string/forgot_password"
            android:layout_gravity  ="center_horizontal"
            android:textColor       ="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width                ="match_parent"
        android:layout_height               ="wrap_content"
        android:layout_alignParentBottom    ="true"
        android:orientation                 ="horizontal"
        android:weightSum                   ="2">

        <Button
            android:id              ="@+id/sign_up_btn"
            android:layout_width    ="0dp"
            android:layout_height   ="wrap_content"
            android:layout_weight   ="1"
            android:layout_marginRight="1dp"
            android:background      ="@color/colorPrimary"
            android:textColor       ="@android:color/white"
            android:text            ="@string/sign_up" />

        <Button
            android:id                  ="@+id/log_in_button"
            android:layout_width        ="0dp"
            android:layout_height       ="wrap_content"
            android:layout_weight       ="1"
            android:layout_marginLeft   ="1dp"
            android:background          ="@color/colorPrimary"
            android:textColor           ="@android:color/white"
            android:text                ="@string/log_in" />

    </LinearLayout>

</RelativeLayout>
